--- a/activity/index.html
+++ b/activity/index.html
@@ -49,6 +49,7 @@
         <h2>Activity Links</h2>
         <a href="guessinggame.html">Guess the Secret Word Game</a>
         <a href="dashboard.html">Browser Environment Dashboard</a>
+        <a href="dom_traversal.html">Interactive DOM Traversal and Manipulation</a>
     </section>
 </body>
 </html>
