--- a/activity/index.html
+++ b/activity/index.html
@@ -50,6 +50,8 @@
         <a href="guessinggame.html">Guess the Secret Word Game</a>
         <a href="dashboard.html">Browser Environment Dashboard</a>
         <a href="dom_traversal.html">Interactive DOM Traversal and Manipulation</a>
+        <a href="interactiveCanvas.html">Interactive Canvas Shape Editor</a>
+
     </section>
 </body>
 </html>
